<resources>
    <string name="app_name">Network interactions</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="music">Music</string>
    <string name="setting">Settings</string>
    <string name="theme_news">News Topic</string>
    <string name="android">Android</string>
    <string name="sport">Sports</string>
    <string name="technology">Technology</string>
    <string name="politics">Politics</string>
    <string name="enter_a_category_news">Enter a category news</string>
    <string name="hz">Другое</string>
    <string name="theme">Theme</string>
    <string name="day">Day</string>
    <string name="night">Night</string>

    <string name="theme_news_setting">THEME_KEY</string>
    <string name="enter_theme_news">Enter theme news</string>

</resources>