<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/setting"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:id="@+id/intentMainFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/baseline_check_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/setting_title"
            app:layout_constraintTop_toTopOf="@id/setting_title"/>

        <TextView
            android:id="@+id/news_topic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="@string/theme_news"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting_title" />


        <RadioGroup
            android:id="@+id/theme_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_topic_title">


            <RadioButton
                android:id="@+id/android_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="@drawable/custom_radio_selector"
                android:button="@color/purple_500"
                android:drawableStart="@drawable/ic_baseline_android_24"
                android:text="@string/android"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/sports_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="@drawable/custom_radio_selector"
                android:button="@color/purple_500"
                android:drawableStart="@drawable/ic_baseline_sports_basketball_24"
                android:text="@string/sport"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/technology_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="@drawable/custom_radio_selector"
                android:button="@color/purple_500"
                android:drawableStart="@drawable/m_virtual"
                android:text="@string/technology"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/politics_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="@drawable/custom_radio_selector"
                android:button="@color/purple_500"
                android:drawableStart="@drawable/m_politics"
                android:text="@string/politics"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/hz_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:background="@drawable/custom_radio_selector"
                android:button="@color/purple_500"
                android:drawableStart="@drawable/ic_baseline_category_24"
                android:text="@string/hz"
                android:textAlignment="center"
                android:textColor="@drawable/custom_radio_text"
                android:textSize="16sp">
            </RadioButton>

        </RadioGroup>


        <TextView
            android:id="@+id/theme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/theme_news"
            app:layout_constraintTop_toBottomOf="@id/theme_news" />


        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/theme_title"
            app:layout_constraintStart_toStartOf="@id/news_topic_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@color/purple_700"
                android:drawableStart="@drawable/ic_baseline_wb_sunny_24"
                android:text="@string/day"
                android:textColor="@color/black"
                android:padding="20dp"
                android:background="@drawable/custom_theme_radio_selectori"
                android:drawablePadding="8dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@color/purple_700"
                android:drawableStart="@drawable/ic_baseline_mode_night_24"
                android:text="@string/night"
                android:textColor="@color/black"
                android:padding="20dp"
                android:background="@drawable/custom_theme_radio_selectori"
                android:drawablePadding="8dp"
                android:layout_marginStart="20dp"
                />

        </RadioGroup>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
